--- a/contact.html
+++ b/contact.html
@@ -147,6 +147,10 @@
             <a class="nav-link active" href="index.html">Accueil</a>
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link " href="#service">Nos services</a>
+          </li>
+
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Techniciens</a>
             <div class="dropdown-menu">
@@ -155,9 +159,7 @@
             </div>
           </li>
 
-          <li class="nav-item">
-            <a class="nav-link " href="property-grid.html">Travaux réalisés</a>
-          </li>
+          
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">S'inscrire</a>
@@ -170,9 +172,9 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Connexion</a>
             <div class="dropdown-menu">
-              <a class="dropdown-item " href="property-single.html">Client</a>
-              <a class="dropdown-item " href="blog-single.html">Technicien</a>
-              <a class="dropdown-item " href="agents-grid.html">Admin</a>
+              <a class="dropdown-item " href="connexion_client.html">Client</a>
+              <a class="dropdown-item " href="connexion_tech.html">Technicien</a>
+              <a class="dropdown-item " href="connexion_admin.html">Admin</a>
             </div>
           </li>
           <li class="nav-item">
